--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/WeeklyXamarin.Mobile.iOS.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/WeeklyXamarin.Mobile.iOS.csproj
@@ -137,6 +137,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\WeeklyXamarin.Core\WeeklyXamarin.Core.csproj">
+      <Project>{03bc973c-14b4-465f-8436-dc396a927382}</Project>
+      <Name>WeeklyXamarin.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WeeklyXamarin.Mobile\WeeklyXamarin.Mobile.csproj">
       <Project>{E8DE2362-C66E-46A4-B735-260D20E64795}</Project>
       <Name>WeeklyXamarin.Mobile</Name>
