--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Core/WeeklyXamarin.Core.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Core/WeeklyXamarin.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
   </ItemGroup>
 
