--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/WeeklyXamarin.Mobile.iOS.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/WeeklyXamarin.Mobile.iOS.csproj
@@ -132,6 +132,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
   </ItemGroup>
