--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Curated.ImportUtil/WeeklyXamarin.Curated.ImportUtil.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Curated.ImportUtil/WeeklyXamarin.Curated.ImportUtil.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WeeklyXamarin.Core\WeeklyXamarin.Core.csproj" />
