--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Curated.ImportUtil/WeeklyXamarin.Curated.ImportUtil.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Curated.ImportUtil/WeeklyXamarin.Curated.ImportUtil.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
