--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Curated/WeeklyXamarin.Curated.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Curated/WeeklyXamarin.Curated.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
