--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console">
+      <Version>3.1.6</Version>
+    </PackageReference>
     <PackageReference Include="MonkeyCache.FileStore">
       <Version>1.3.0</Version>
     </PackageReference>
