--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
@@ -70,6 +70,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Effects\ScrollNotifierEffect.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
