--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.UWP/WeeklyXamarin.Mobile.UWP.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.UWP/WeeklyXamarin.Mobile.UWP.csproj
@@ -138,7 +138,7 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <Content Include="*.png"/>
+    <Content Include="*.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -151,6 +151,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>3.4.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>3.4.3</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console">
       <Version>3.1.7</Version>
     </PackageReference>
