--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Core/WeeklyXamarin.Core.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Core/WeeklyXamarin.Core.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
     <PackageReference Include="MonkeyCache.FileStore" Version="1.3.0" />
