--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.UWP/WeeklyXamarin.Mobile.UWP.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.UWP/WeeklyXamarin.Mobile.UWP.csproj
@@ -169,6 +169,12 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Shiny.Core">
+      <Version>1.2.0.1755</Version>
+    </PackageReference>
+    <PackageReference Include="Shiny.Notifications">
+      <Version>1.2.0.1755</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.5.3.2</Version>
     </PackageReference>
