--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
@@ -335,6 +335,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\SplashLogo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\mark.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
