--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.UWP/WeeklyXamarin.Mobile.UWP.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.UWP/WeeklyXamarin.Mobile.UWP.csproj
@@ -195,6 +195,9 @@
       <Name>WeeklyXamarin.Mobile</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
