Search page complete. More state stuff. Added bookmark icon

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/WeeklyXamarin.Mobile.iOS.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/WeeklyXamarin.Mobile.iOS.csproj
@@ -312,9 +312,18 @@
   <ItemGroup>
     <BundleResource Include="Resources\mark.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\BookmarkIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\BookmarkIndicator%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\BookmarkIndicator%403x.png" />
+  </ItemGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadUnhandledDeviceExceptionWeeklyXamarinMobileiOSHideInfoBar="True" />
+      <UserProperties XamarinHotReloadUnhandledDeviceExceptionWeeklyXamarinMobileiOSHideInfoBar="True" TriggeredFromHotReload="False" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
