--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/WeeklyXamarin.Mobile.Android.csproj
@@ -341,6 +341,24 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\mark.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\BookmarkIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-ldpi\BookmarkIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-mdpi\BookmarkIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\BookmarkIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\BookmarkIndicator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxxhdpi\BookmarkIndicator.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
