Refactored Settings Page
Moved some monkeys

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.csproj
@@ -56,6 +56,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AcknowledgementsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ArticleDataTemplate.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
