--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/Info.plist
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.iOS/Info.plist
@@ -34,9 +34,11 @@
 	<string>WeeklyXamarin.Mobile</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
-  <key>UIBackgroundModes</key>
-  <array>
-    <string>fetch</string>
-  </array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
+  	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
