--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/Properties/AndroidManifest.xml
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.weeklyxamarin.mobile" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="1.1" package="com.weeklyxamarin.mobile" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
-	<application android:label="Weekly Xamarin Mobile"
-               android:icon="@mipmap/ic_launcher"
-    android:roundIcon="@mipmap/ic_launcher_round">
-    
-  </application>
+	<application android:label="Weekly Xamarin Mobile" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round"></application>
 </manifest>
