Added ability to open link in app (but not set as default)

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile/WeeklyXamarin.Mobile.csproj
@@ -37,4 +37,10 @@
     <ProjectReference Include="..\WeeklyXamarin.Core\WeeklyXamarin.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Views\ArticlePage.xaml.cs">
+      <DependentUpon>ArticlePage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
