--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,12 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Publish .NET Core Project
         run: dotnet publish src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/WeeklyXamarin.Blazor.Client.csproj -c Release -o release
+      - name: debug
+        run: pwd
+      - name: debug 2
+        run: ls
+      - name: debug 3
+        run: ls -R
       
       # Changes the base tag in index.html from ‘/’ to ‘WeeklyXamarin.Mobile’ to match the GitHub Pages repository subdirectory
       - name: Change base-tag in index.html from / to WeeklyXamarin.Mobile
