Added Form Button and fixed icons and title

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/manifest.json
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "WeeklyXamarin.Blazor",
-  "short_name": "WeeklyXamarin.Blazor",
+  "name": "Weekly Xamarin",
+  "short_name": "Weekly Xamarin",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
