--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj
@@ -2,19 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.10" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Client\WeeklyXamarin.Blazor.Client.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
 
 </Project>
