Display version with build date/time

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/WeeklyXamarin.Blazor.Client.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/WeeklyXamarin.Blazor.Client.csproj
@@ -6,6 +6,10 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <VersionSuffix>$([System.DateTime]::get_Now().get_Year())$([System.DateTime]::get_Now().get_Month().ToString("D2"))$([System.DateTime]::get_Now().get_Day().ToString("D2"))-$([System.DateTime]::get_Now().get_Hour().ToString("D2"))$([System.DateTime]::get_Now().get_Minute().ToString("D2"))</VersionSuffix>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="MatBlazor" Version="2.8.0" />
